--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -40,7 +40,7 @@
             <td>
                 <form th:action="@{'/main/add-package/NONE'}" method="post">
                     <div class="form-group">
-                        <input type="number" class="form-control" name="quantity" required>
+                        <input type="number" class="form-control" name="quantity" required oninput="validity.valid||(value='');" min="0">
                         <input type="hidden" name="carbonationLevel" value="NONE">
                         <input type="hidden" name="packageCapacity" value="ONE_AND_A_HALF_LITER">
                     </div>
@@ -55,7 +55,7 @@
             <td>
                 <form th:action="@{'/main/add-package/STRONG'}" method="post">
                     <div class="form-group">
-                        <input type="number" class="form-control" name="quantity" required>
+                        <input type="number" class="form-control" name="quantity" required oninput="validity.valid||(value='');" min="0">
                         <input type="hidden" name="carbonationLevel" value="STRONG">
                         <input type="hidden" name="packageCapacity" value="ONE_AND_A_HALF_LITER">
                     </div>
@@ -72,7 +72,7 @@
             <td>
                 <form th:action="@{'/main/add-package/LIGHT'}" method="post">
                     <div class="form-group">
-                        <input type="number" class="form-control" name="quantity" required>
+                        <input type="number" class="form-control" name="quantity" required oninput="validity.valid||(value='');" min="0">
                         <input type="hidden" name="carbonationLevel" value="LIGHT">
                         <input type="hidden" name="packageCapacity" value="ONE_AND_A_HALF_LITER">
                     </div>
