--- a/src/main/resources/templates/five-liter.html
+++ b/src/main/resources/templates/five-liter.html
@@ -40,7 +40,7 @@
                 <td>
                     <form th:action="@{'/main/add-package/NONE'}" method="post">
                         <div class="form-group">
-                            <input type="number" class="form-control" name="quantity" required>
+                            <input type="number" class="form-control" name="quantity" required oninput="validity.valid||(value='');" min="0">
                             <input type="hidden" name="carbonationLevel" value="NONE">
                             <input type="hidden" name="packageCapacity" value="FIVE_LITER">
                         </div>
@@ -54,9 +54,9 @@
                 <td>Сильногазована вода</td>
                 <td th:text="${strongCarbonatedCount}"></td>
                 <td>
-                    <form th:action="@{'/main/add-package/STRONG'}" method="post">
+                    <form th:action="@{'/main/add-package/STRONG'}" method="post" >
                         <div class="form-group">
-                            <input type="number" class="form-control" name="quantity" required>
+                            <input type="number" class="form-control" name="quantity" required oninput="validity.valid||(value='');" min="0">
                             <input type="hidden" name="carbonationLevel" value="STRONG">
                             <input type="hidden" name="packageCapacity" value="FIVE_LITER">
                         </div>
@@ -71,7 +71,7 @@
                 <td>
                     <form th:action="@{'/main/add-package/LIGHT'}" method="post">
                         <div class="form-group">
-                            <input type="number" class="form-control" name="quantity" required>
+                            <input type="number" class="form-control" name="quantity" required oninput="validity.valid||(value='');" min="0" >
                             <input type="hidden" name="carbonationLevel" value="LIGHT">
                             <input type="hidden" name="packageCapacity" value="FIVE_LITER">
                         </div>
