--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <!-- Можливо, вам потрібно додати інші мета-дані або посилання на стилі тут, якщо це необхідно -->
 </head>
 <body>
 
@@ -10,7 +9,7 @@
   <td th:text="${type}"></td>
   <td th:text="${count}"></td>
   <td>
-    <form th:action="@{'/main/add-package/' + ${carbonationLevel}}" method="post">
+    <form th:action="@{'/addPackage/add-package/' + ${carbonationLevel}}" method="post">
       <div class="form-group">
         <input type="number" class="form-control" name="quantity" required oninput="validity.valid||(value='');" min="0">
         <input type="hidden" name="carbonationLevel" th:value="${carbonationLevel}">
