--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,44 +1,54 @@
+<!-- main.html -->
+
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CSS/style.css">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <script src="/JS/script.js"></script>
-    <title>Меденицькі Джерела</title>
+    <title>Main Page</title>
 </head>
 <body>
+<div class="container mt-5">
+    <div class="card">
+        <div class="card-header bg-dark text-white">
+            <h2 class="text-center">Package Statistics</h2>
+        </div>
+        <div class="card-body">
+            <div class="table-responsive">
+                <table class="table table-bordered table-striped">
+                    <thead>
+                    <tr>
+                        <th>Carbonation Level</th>
+                        <th>Package Capacity</th>
+                        <th>Non-carbonated Count</th>
+                        <th>Light Carbonated Count</th>
+                        <th>Strong Carbonated Count</th>
+                        <th>Non-carbonated Count Today</th>
+                        <th>Light Carbonated Count Today</th>
+                        <th>Strong Carbonated Count Today</th>
+                        <th>Today's Total Count</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td><a th:href="@{/statistic/ONE_AND_A_HALF_LITER}"><span th:text="${selectedCapacity}"></span></a></td>
+                        <td><span th:text="${packageCapacity}"></span></td>
+                        <td><span th:text="${nonCarbonatedCount}"></span></td>
+                        <td><span th:text="${strongCarbonatedCount}"></span></td>
+                        <td><span th:text="${lightCarbonatedCount}"></span></td>
+                        <td><span th:text="${nonCarbonatedCountToday}"></span></td>
+                        <td><span th:text="${lightCarbonatedCountToday}"></span></td>
+                        <td><span th:text="${strongCarbonatedCountToday}"></span></td>
+                        <td><span th:text="${todayCount}"></span></td>
+                    </tr>
 
-<div class="w3-sidebar w3-bar-block w3-blue w3-border w3-card w3-large w3-padding" style="width:15%">
-    <a th:href="@{/main?capacity=ONE_AND_A_HALF_LITER}" class="w3-bar-item w3-button">Півтори літра</a>
-    <a th:href="@{/main?capacity=HALF_LITER}" class="w3-bar-item w3-button">Пів літра</a>
-    <a th:href="@{/main?capacity=FIVE_LITER}" class="w3-bar-item w3-button">П'ять літрів</a>
-</div>
-
-<div style="margin-left:15%">
-    <h1 style="color:blue">Меденицькі Джерела </h1>
-
-    <div class="container mt-5">
-        <h2>Вміст складу</h2>
-
-        <table class="table">
-            <thead>
-            <tr>
-                <th scope="col">Тип</th>
-                <th scope="col">Кількість(пакетів)</th>
-                <th scope="col">Дії</th>
-                <th scope="col">Зроблено сьогодні</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:replace="fragments :: waterRow('Негазована вода', ${nonCarbonatedCount}, 'NONE', ${selectedCapacity}, ${nonCarbonatedCountToday})"></tr>
-            <tr th:replace="fragments :: waterRow('Сильногазована вода', ${strongCarbonatedCount}, 'STRONG', ${selectedCapacity}, ${strongCarbonatedCountToday})"></tr>
-            <tr th:replace="fragments :: waterRow('Слабогазована вода', ${lightCarbonatedCount}, 'LIGHT', ${selectedCapacity}, ${lightCarbonatedCountToday})"></tr>
-            </tbody>
-        </table>
-
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 </div>
-<script src="/JS/script.js"></script>
 </body>
 </html>
