--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -10,11 +10,18 @@
     <title>Main Page</title>
 </head>
 <body>
+
 <div class="container mt-5">
+    <div class="card-header bg-dark text-white" style="width:15%">
+        <a href="/Packages/ONE_AND_A_HALF_LITER" class="w3-bar-item w3-button">Півтори літра</a>
+        <a href="/Packages/HALF_LITER" class="w3-bar-item w3-button">Пів літра</a>
+        <a href="/Packages/FIVE_LITER" class="w3-bar-item w3-button">П'ять літрів</a>
+    </div>
     <div class="card">
         <div class="card-header bg-dark text-white">
             <h2 class="text-center">Package Statistics</h2>
         </div>
+
         <div class="card-body">
             <div class="table-responsive">
                 <table class="table table-bordered table-striped">
