Order item fields added

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -4,11 +4,11 @@
 </head>
 <body>
 
-<tr th:fragment="waterRow(type, count, carbonationLevel, packageCapacity, countToday)">
+<tr th:fragment="waterRow(type, count, carbonationLevel, packageCapacity, todayCount)">
   <td th:text="${type}"></td>
   <td th:text="${count}"></td>
   <td>
-    <form th:action="@{'/addPackage/add-package/' + ${carbonationLevel}}" method="post">
+    <form th:action="@{'/packages/addPackage/' + ${carbonationLevel}}" method="post">
       <div class="form-group">
         <input type="number" class="form-control" name="quantity" required oninput="validity.valid||(value='');" min="0">
         <input type="hidden" name="carbonationLevel" th:value="${carbonationLevel}">
@@ -17,9 +17,8 @@
       <button type="submit" class="btn btn-primary">Додати</button>
     </form>
   </td>
-  <td th:text="${countToday}"></td>
+  <td th:text="${todayCount}"></td>
 </tr>
-
 
 </body>
 </html>
