--- a/src/main/resources/templates/packageStat.html
+++ b/src/main/resources/templates/packageStat.html
@@ -10,7 +10,7 @@
 <div class="container mt-5">
     <div class="card">
         <div class="card-header bg-dark text-white">
-            <h2 class="text-center">Package Statistics  <td th:text="${selectedCapacity}"></td></h2>
+            <h2 class="text-center">Статистика для  <td th:text="${selectedCapacity}"></td></h2>
         </div>
         <div class="card-body">
             <div class="table-responsive">
