--- a/src/main/resources/static/CSS/style.css
+++ b/src/main/resources/static/CSS/style.css
@@ -1,10 +1,46 @@
-body {
-    background-color: powderblue;
-}
-
 h1{
     text-align: center;
 }
-table tr:nth-of-type(1) {background: lightcyan;}
-table tr:nth-of-type(2) {background: lightblue;}
-table tr:nth-of-type(3) {background: lightgreen;}
+table tr:nth-of-type(1) {background: lightcyan; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);}
+table tr:nth-of-type(2) {background: lightblue; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);}
+table tr:nth-of-type(3) {background: lightgreen; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);}
+
+body {
+    font-family: 'Roboto', sans-serif;
+    background-color: #f8f9fa;
+}
+
+.card {
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.card-header {
+    background-color: lightskyblue;
+    color: #ffffff;
+    border-radius: 15px 15px 0 0;
+}
+
+.table th, .table td {
+    text-align: center;
+    width: 100px;
+}
+
+.table thead th {
+    position: sticky;
+    top: 0;
+    background-color: lightskyblue;
+    color: #000000;
+}
+
+.table tbody tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+#orderItem {
+    background-color: gray;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+}
