--- a/src/main/resources/templates/addPackage.html
+++ b/src/main/resources/templates/addPackage.html
@@ -10,18 +10,20 @@
 <body>
 
 <div class="w3-sidebar w3-bar-block w3-blue w3-border w3-card w3-large w3-padding" style="width:15%">
+  <a href="/main" class="w3-bar-item w3-button">Статистика</a>
   <a href="/packages/ONE_AND_A_HALF_LITER" class="w3-bar-item w3-button">Півтори літра</a>
   <a href="/packages/HALF_LITER" class="w3-bar-item w3-button">Пів літра</a>
   <a href="/packages/FIVE_LITER" class="w3-bar-item w3-button">П'ять літрів</a>
   <a href="/orders" class="w3-bar-item w3-button">Замовлення</a>
-
 </div>
 
 <div style="margin-left:15%">
-  <h1 style="color:blue">Меденицькі Джерела </h1>
+  <h1 style="color:cadetblue">Меденицькі Джерела </h1>
   <div class="container mt-5">
-    <h2>Вміст складу</h2>
-
+    <div class="card">
+      <div class="card-header bg-blue text-black">
+        <h2 class="text-center " style="color: black">Вміст складу</h2>
+      </div>
     <table class="table">
       <thead>
       <tr>
@@ -38,7 +40,8 @@
       <td>Загально за сьогодні: <span th:text="${todayCount}"></span></td>
       </tbody>
     </table>
-
+  </div>
+</div>
 </div>
 <script src="/JS/script.js"></script>
 </body>
