Finished displaying information on the main page.

--- a/src/main/resources/templates/addPackage.html
+++ b/src/main/resources/templates/addPackage.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="w3-sidebar w3-bar-block w3-blue w3-border w3-card w3-large w3-padding" style="width:15%">
-    <a href="/Packages/ONE_AND_A_HALF_LITER" class="w3-bar-item w3-button">Півтори літра</a>
+    <a href="/Packages/main" class="w3-bar-item w3-button">Півтори літра</a>
     <a href="/Packages/ONE_AND_A_HALF_LITER" class="w3-bar-item w3-button">Півтори літра</a>
     <a href="/Packages/HALF_LITER" class="w3-bar-item w3-button">Пів літра</a>
     <a href="/Packages/FIVE_LITER" class="w3-bar-item w3-button">П'ять літрів</a>
