--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -22,20 +22,20 @@
 
   <div class="container mt-5">
 
-    <form id="orderForm" th:action="@{/orders/create-order}" method="POST">
+    <form id="orderForm" th:action="@{/orders/create-order}" method="POST" >
       <label for="address">Адреса:</label>
-      <input type="text" id="address" name="address"><br><br>
+      <input type="text" id="address" name="address" required><br><br>
 
       <label for="city">Місто:</label>
-      <input type="text" id="city" name="city"><br><br>
+      <input type="text" id="city" name="city" required><br><br>
 
       <label for="customerNumber">Номер замовника:</label>
-      <input type="text" id="customerNumber" name="customerNumber"><br><br>
+      <input type="text" id="customerNumber" name="customerNumber" required><br><br>
 
       <div id="orderItemsContainer">
         <div class="orderItemContainer">
-          <h3>Пакет 1</h3>
           <div class="orderItem">
+            <h3>Пакет 1</h3>
             <label for="packageCapacity1">Місткість:</label>
             <select id="packageCapacity1" name="packageCapacity">
               <option value="HALF_LITER">0.5 Літра</option>
@@ -49,7 +49,8 @@
               <option value="NONE">Негазована</option>
             </select>
             <label for="packageQuantity1">Кількість:</label>
-            <input type="number" id="packageQuantity1" name="packageQuantity"><br><br>
+            <input type="number" id="packageQuantity1" name="packageQuantity" oninput="validity.valid||(value='');" min="1">
+            <button type="button" onclick="removePackage(this.parentNode)">Видалити</button>
           </div>
         </div>
       </div>
@@ -59,69 +60,7 @@
       <button type="submit" onclick="createOrder(event)">Створити замовлення</button>
     </form>
 
-    <script>
-      let orderItemsCount = 1;
-
-      function addOrderItem() {
-        orderItemsCount++;
-        const orderItemContainerHtml = `
-                    <div class="orderItemContainer">
-                        <h3>Пакет ${orderItemsCount}</h3>
-                        <div class="orderItem">
-                            <label for="packageCapacity${orderItemsCount}">Місткість:</label>
-                            <select id="packageCapacity${orderItemsCount}" name="packageCapacity">
-                                <option value="HALF_LITER">0.5 Літра</option>
-                                <option value="ONE_AND_A_HALF_LITER">1.5 Літра</option>
-                                <option value="FIVE_LITER">5 Літрів</option>
-                            </select>
-                            <label for="carbonationLevel${orderItemsCount}">Газованість:</label>
-                            <select id="carbonationLevel${orderItemsCount}" name="carbonationLevel">
-                                <option value="STRONG">Сильногазована</option>
-                                <option value="LIGHT">Слабогазована</option>
-                                <option value="NONE">Негазована</option>
-                            </select>
-                            <label for="packageQuantity${orderItemsCount}">Кількість:</label>
-                            <input type="number" id="packageQuantity${orderItemsCount}" name="packageQuantity"><br><br>
-                        </div>
-                    </div>
-                `;
-        document.getElementById('orderItemsContainer').insertAdjacentHTML('beforeend', orderItemContainerHtml);
-      }
-        function createOrder(event) {
-          event.preventDefault();
-          const order = {
-            address: document.getElementById('address').value,
-            city: document.getElementById('city').value,
-            customerNumber: document.getElementById('customerNumber').value,
-            orderItems: []
-          };
-
-          for (let i = 1; i <= orderItemsCount; i++) {
-            const packageCapacity = document.getElementById(`packageCapacity${i}`).value;
-            const carbonationLevel = document.getElementById(`carbonationLevel${i}`).value;
-            const packageQuantity = document.getElementById(`packageQuantity${i}`).value;
-
-            const orderItem = {
-              packageCapacity: packageCapacity,
-              carbonationLevel: carbonationLevel,
-              packageQuantity: parseInt(packageQuantity)
-            };
-
-            order.orderItems.push(orderItem);
-          }
-
-          fetch('/orders/create-order', {
-            method: 'POST',
-            headers: {
-              'Content-Type': 'application/json'
-            },
-            body: JSON.stringify(order)
-          })
-                  .then(response => response.json())
-                  .then(data => console.log(data))
-                  .catch(error => console.error('Error:', error));
-        }
-      </script>
+    <script src="/JS/script.js"></script>
 
     </form>
   </div>
